[gd_scene load_steps=2 format=3 uid="uid://result_screen_scene"]

[ext_resource type="Script" path="res://scripts/ui/result_screen.gd" id="1_result"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_result")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -400.0
offset_right = 300.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "游戏结束"
horizontal_alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 60)
text = "返回主菜单"
